# musicManager

./: README.md  package.json  pnpm-lock.yaml  tailwind.config.js
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  config.rs  device.rs  lib.rs  main.rs  metadata.rs  transfer.rs
src/components/: DeviceBrowser.tsx  FileBrowser.tsx  FileBrowserHeader.tsx  FileBrowserToolbar.tsx  FileList.tsx  MetadataEditorModal.tsx  Modal.tsx  PlayerFooter.tsx  PlayerSidebar.tsx  TabView.tsx
src/context/: DeviceContext.tsx  FileNavigationContext.tsx  PlayerContext.tsx
src/hooks/: useArtistMode.ts  useAudioPlayback.ts  useDeviceNavigation.ts  useDevices.ts  useFileNavigation.ts  useFileSelection.ts  useFolderOperations.ts  useTransferProgress.ts
src/types/: device.ts  fileBrowser.ts  music.ts
